Avoid some columns collapsing with long names/titles.

--- a/src/stylesheets/custom_lists_sidebar.scss
+++ b/src/stylesheets/custom_lists_sidebar.scss
@@ -1,4 +1,5 @@
 .custom-lists-sidebar {
+  min-width: 15em;
   border: 1px solid $gray;
   padding: 15px;
   margin: 7px 7px 15px 7px;
